--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "credential": "^0.2.6",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -20,12 +19,12 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "passport": "^0.3.0",
-    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.11.4"
+    "sails-mongo": "^0.11.4",
+    "waterlock": "^0.1.0",
+    "waterlock-local-auth": "git+https://github.com/waterlock/waterlock-local-auth.git"
   },
   "scripts": {
     "debug": "node debug app.js",
