--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "lodash": "^3.10.1",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
+    "sails-auth": "^1.3.1",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.4",
-    "waterlock": "^0.1.0",
-    "waterlock-local-auth": "git+https://github.com/waterlock/waterlock-local-auth.git"
+    "sails-permissions": "^1.4.4"
   },
   "scripts": {
     "debug": "node debug app.js",
