--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "lodash": "^3.10.1",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
-    "sails-auth": "^1.3.1",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.11.4",
-    "sails-permissions": "^1.4.4"
+    "sails-mongo": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
