--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "credential": "^0.2.6",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -19,7 +20,11 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "jsonwebtoken": "^5.4.0",
     "lodash": "^3.10.1",
+    "passport": "^0.3.0",
+    "passport-jwt": "^1.2.1",
+    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
     "sails-disk": "~0.10.0",
