--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "backbone": "~1.2.3",
-    "jquery": "components/jquery#~2.1.4"
+    "jquery": "components/jquery#~2.1.4",
+    "requirejs": "~2.1.20"
   }
 }
